Implement persistent player spell rules